--- a/index.html
+++ b/index.html
@@ -72,25 +72,27 @@
                                 help
                                 shape a
                                 cleaner, greener future for all.</p>
-                            <div class="twoBtns">
-                                <button type="button">Invest Now</button>
-                                <button type="button">Watch Video</button>
-                            </div>
-                            <div class="grey-sec">
-                                <div class="grey-sec-child">
-                                    <span>28+</span><br />
-                                    <p>Homologated
-                                        Countries</p>
+                            <div class="mobile-view">
+                                <div class="twoBtns">
+                                    <button type="button">Invest Now</button>
+                                    <button type="button">Watch Video</button>
                                 </div>
-                                <div class="grey-sec-child">
-                                    <span>1 Lakh + </span><br />
-                                    <p>Pre-Ordered
-                                        Products</p>
-                                </div>
-                                <div class="grey-sec-child">
-                                    <span>14 Cr</span><br />
-                                    <p>Fund Raise by
-                                        Angel Investors</p>
+                                <div class="grey-sec">
+                                    <div class="grey-sec-child">
+                                        <span>28+</span><br />
+                                        <p>Homologated
+                                            Countries</p>
+                                    </div>
+                                    <div class="grey-sec-child">
+                                        <span>1 Lakh + </span><br />
+                                        <p>Pre-Ordered
+                                            Products</p>
+                                    </div>
+                                    <div class="grey-sec-child">
+                                        <span>14 Cr</span><br />
+                                        <p>Fund Raise by
+                                            Angel Investors</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -257,34 +259,31 @@
         <section class="cards">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4">
-                        <div class="cards-item">
-                            <div class="label">New</div>
-                            <img src="img/muvi_scooty.svg" alt="Black Bycircle">
-                            <div class="cards-content">
-                                <h5>Muvi</h5>
-                                <p>A sleek & dependable Electric 2-Wheeler and is European made.</p>
+                    <div class="col">
+                        <div class="cards-item-sec owl-carousel owl-theme">
+                            <div class="cards-item">
+                                <div class="label">New</div>
+                                <img src="img/muvi_scooty.png" alt="Black Bycircle">
+                                <div class="cards-content">
+                                    <h5>Muvi</h5>
+                                    <p>A sleek & dependable Electric 2-Wheeler and is European made.</p>
+                                </div>
                             </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="cards-item">
-                            <div class="label">Upcoming</div>
-                            <img src="img/velocipedo_img.svg" alt="Velocipedo Img">
-                            <div class="cards-content">
-                                <h5>Velocipedo</h5>
-                                <p>A sleek & dependable Electric 2-Wheeler and is European made.</p>
+                            <div class="cards-item">
+                                <div class="label">Upcoming</div>
+                                <img src="img/velocipedo_img.png" alt="Velocipedo Img">
+                                <div class="cards-content">
+                                    <h5>Velocipedo</h5>
+                                    <p>A sleek & dependable Electric 2-Wheeler and is European made.</p>
+                                </div>
                             </div>
-                        </div>
-
-                    </div>
-                    <div class="col-md-4">
-                        <div class="cards-item">
-                            <div class="label">Popular</div>
-                            <img src="img/black_bycircle.svg" alt="Black Bycircle">
-                            <div class="cards-content">
-                                <h5>Transil</h5>
-                                <p>A sleek & dependable Electric 2-Wheeler and is European made.</p>
+                            <div class="cards-item">
+                                <div class="label">Popular</div>
+                                <img src="img/black_bycircle.png" alt="Black Bycircle">
+                                <div class="cards-content">
+                                    <h5>Transil</h5>
+                                    <p>A sleek & dependable Electric 2-Wheeler and is European made.</p>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -364,7 +363,7 @@
                                     <button type="button"> Invest Now</button>
                                 </li>
                                 <li>
-                                    <img src="img/hand-adding-coins-stack-covered-dirt-plants (1) 1.svg"
+                                    <img src="img/hand-adding-coins-stack-covered-dirt-plants.png"
                                         alt="hand adding coins stack covered dirt plants">
                                 </li>
                             </ul>
@@ -382,7 +381,7 @@
                         <div class="testimonial sliders  owl-carousel owl-theme">
                             <div class="slider-item">
                                 <div class="left">
-                                    <img src="img/aditya_singh.svg" alt="Aditya Singh">
+                                    <img src="img/aditya_singh.png" alt="Aditya Singh">
                                     <h5>Aditya Singh</h5>
                                     <span>Angel Investor, India</span>
                                 </div>
@@ -395,7 +394,7 @@
                             </div>
                             <div class="slider-item">
                                 <div class="left">
-                                    <img src="img/aditya_singh.svg" alt="Aditya Singh">
+                                    <img src="img/aditya_singh.png" alt="Aditya Singh">
                                     <h5>Aditya Singh</h5>
                                     <span>Angel Investor, India</span>
                                 </div>
@@ -411,25 +410,27 @@
                         <div class="form-section">
                             <div class="form-body">
                                 <div class="leftSec">
-                                    <img src="img/form_scooty_img.svg" alt="scooty bg" class="form_bg_img">
-                                    <p>
+                                    <img src="img/form_scooty.png" alt="scooty bg" class="form_bg_img">
+                                    <div class="text-sec">
                                         <img src="img/vajram_logo.svg" alt="vajram logo">
                                         <span>Lorem Ipsum dolor set, lorem ipsum dolor set lorem ipsum dolor seth lorem
                                             ipsum
                                             dolor
                                             set <br /> <br /> <a href="#">Know More </a></span>
-                                    </p>
+                                    </div>
 
                                 </div>
                                 <div class="rightSec">
                                     <div class="invest-form">
                                         <h5>Invest Now</h5>
-                                        <ul>
-                                            <li>Backed By Tokenfolio</li>
-                                            <li>Go Green</li>
-                                            <li>Silent Storm</li>
-                                            <li>EcoRide</li>
-                                        </ul>
+                                        <div class="mobile-view-scroll">
+                                            <ul>
+                                                <li>Backed By Tokenfolio</li>
+                                                <li>Go Green</li>
+                                                <li>Silent Storm</li>
+                                                <li>EcoRide</li>
+                                            </ul>
+                                        </div>
                                         <form action="">
                                             <label>I want to invest</label>
                                             <input type="text">
@@ -472,7 +473,7 @@
                             <li><a href="#">Products</a></li>
                             <li><a href="#">Invest Now</a></li>
                             <li><a href="#">Privacy Policy</a></li>
-                            <li>
+                            <li class="social-footer">
                                 <a href="#"><img src="img/google.svg" alt="google icon"></a>
                                 <a href="#"><img src="img/twitter_icon.svg" alt="twitter icon"></a>
                                 <a href="#"><img src="img/instagram_icon.svg" alt="instagram icon"></a>
@@ -635,7 +636,7 @@
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <!-- <script src="js/owl.carousel.js"></script> -->
-   
+
     <script src="js/jquery.js"></script>
     <script src="js/jqueryui.js"></script>
     <script src="js/owl.carousel.min.js"></script>
@@ -682,11 +683,32 @@
             dots: false,
             loop: true,
             margin: 30,
-            autoWidth:true,
+            autoWidth: true,
             autoplay: true,
             autoplaySpeed: 1000,
             autoplayTimeout: 3000,
             // navText: ["<img src='img/arrow-left.svg'>", "<img src='img/arrow-right.svg'>"]
+        });
+        $(".cards-item-sec").owlCarousel({
+            items: 3,
+            nav: false,
+            dots: false,
+            loop: true,
+            margin: 30,
+            autoplay: false,
+            autoplaySpeed: 1000,
+            autoplayTimeout: 3000,
+            responsive: {
+                0: {
+                    items: 1,
+                    center: true,
+                    margin: 20,
+                    stagePadding: 30,
+                },
+                768: {
+                    items: 3,
+                }
+            }
         });
         $(".testimonial").owlCarousel({
             items: 1,
